kubernetes/apps/prod/homepage/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  tls:
    secretName: homepage.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`homepage.${DOMAIN}`)
      middlewares:
        - name: oidc
          namespace: traefik
      services:
        - name: homepage
          kind: Service
          namespace: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
